--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: CS371p Fall 2016: Samuel Pritchett
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
