--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: CS371p Fall 2016: Samuel Pritchett
 
 # Short bio or description (displayed in the header)
-description: Student in Glenn Downing's Object Oriented Programming class at The University of Texas
+description: I am a senior majoring in computer science at the University of Texas at Austin and I am currently taking Glenn Downing's Object Oriented Programming class 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
