--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS371p Fall 2016: Samuel Pritchett
+name: "CS371p Fall 2016: Samuel Pritchett"
 
 # Short bio or description (displayed in the header)
-description: I am a senior majoring in computer science at the University of Texas at Austin and I am currently taking Glenn Downing's Object Oriented Programming class 
+description: "I am a senior majoring in computer science at the University of Texas at Austin and I am currently taking Glenn Downing's Object Oriented Programming class"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
