--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: "CS371p Fall 2016: Samuel Pritchett"
 description: "I am a senior majoring in computer science at the University of Texas at Austin and I am currently taking Glenn Downing's Object Oriented Programming class"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/14204269?v=3&u=b366e253b6ffe74777efac6d451eb9be01ffb99e&s=140
 
 #
 # Flags below are optional
